Lesson 18 - clean architecture home page

--- a/app/src/main/res/navigation/app_graph.xml
+++ b/app/src/main/res/navigation/app_graph.xml
@@ -26,7 +26,7 @@
 
         <argument
             android:name="store"
-            app:argType="kz.nfactorial.nfactorialapp.home.presentation.models.Store" />
+            app:argType="kz.nfactorial.nfactorialapp.home.presentation.models.StoreUI" />
     </fragment>
 
     <fragment
