--- a/app/src/main/res/navigation/app_graph.xml
+++ b/app/src/main/res/navigation/app_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="kz.nfactorial.nfactorialapp.home.presentation.HomeFragment"
+        android:name="kz.nfactorial.nfactorialapp.home.presentation.HomeXmlFragment"
     >
         <action
             android:id="@+id/action_home_to_store"
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/registration"
-        android:name="kz.nfactorial.nfactorialapp.registration.presentation.RegistrationFragment"/>
+        android:name="kz.nfactorial.nfactorialapp.registration.presentation.RegistrationXmlFragment"/>
 
     <fragment
         android:id="@+id/searchFragment"
